2008-05-07  William Jon McCann  <jmccann@redhat.com>

	* schemas/desktop_gnome_lockdown.schemas.in:
	Add disable_application_handlers lockdown.

2008-04-27  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/*.*: Include headers from srcdir over
	the installed ones. Some other small cleanups.

2008-04-27  William Jon McCann  <jmccann@redhat.com>

	* schemas/desktop_gnome_lockdown.schemas.in:
	Add disable_application_handlers lockdown.

2008-04-10  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_thumbnail_cache.schemas.in:
	Re-added schema to support the thumbnail cache cleaner from 
	the new gnome-settings-daemon housekeeping plug-in, after
	branching for gnome-2-22. Bug #523159.

2008-04-10  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_thumbnail_cache.schemas.in:
	Revert commit of 2008-04-04 due to string freeze.

2008-04-09  Stefan Kost  <ensonic@users.sf.net>

	* libgnome/gnome-program.c: Unref GConfClient. Bug #525815

2008-04-04  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_thumbnail_cache.schemas.in:
	Added schema to support the thumbnail cache cleaner from the
	new gnome-settings-daemon housekeeping plug-in. Bug #523159.

2008-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-triggers.c: Remove unused
	static functions: gnome_triggerlist_free() and
	gnome_trigger_free()

2008-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

======================= libgnome 2.22.0 ====================

2008-03-04  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.shemas.in.in: Use the
	gio backend for the filechooser by default. Patch from Luca
	Ferretti.

2007-11-15  Ross Burton  <ross@openedhand.com>

	* schemas/desktop_gnome_applications_office.schemas.in:
	* schemas/Makefile.am:
	Add more default application schemas for office applications,