@@ -1,3 +1,8 @@
+2008-05-29  Christian Persch  <chpe@gnome.org>
+
+	* libgnome/gnome-help.h:
+	* libgnome/gnome-url.h: Only include <glib.h>. Bug #535476.
+
 2008-05-07  William Jon McCann  <jmccann@redhat.com>
 
 	* schemas/desktop_gnome_lockdown.schemas.in:
